BE-03 (7). Tryb SCRIPTED: rozmowa odtwarzana z pliku
